# discord-autodeleter

./: Cargo.toml  Dockerfile  README.md
src/: commands.rs  main.rs  main.rs.bak
